<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:orientation="vertical"
>

    <TextView
            android:id="@+id/displayExpression"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:text=""
            android:gravity="end"
            android:maxLines="1"
            android:textColor="@android:color/white"
    />
    <TextView
            android:id="@+id/displayResult"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:text=""
            android:gravity="end"
            android:maxLines="1"
            android:textColor="@android:color/white"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5sp"
                android:layout_weight="1"
                android:orientation="horizontal">
            <Button
                    android:text="C"
                    android:id="@+id/clear"
                    android:layout_weight="1"
                    style="@style/buttonStyle"
                    android:onClick="clearall"
            />
            <Button
                    android:text="@string/back"
                    android:id="@+id/back"
                    android:layout_weight="1"
                    style="@style/buttonStyle"/>
            <Button
                    android:text="@string/percent"
                    android:id="@+id/percent"
                    android:layout_weight="1"
                    style="@style/buttonStyle"/>
            <Button
                    android:text="@string/div"
                    android:id="@+id/div"
                    android:layout_weight="1"
                    style="@style/buttonStyle"
                    android:onClick="operatorclick"/>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5sp"
                android:layout_weight="1"
                android:orientation="horizontal">
            <Button
                    android:text="@string/seven"
                    android:id="@+id/seven"
                    android:layout_weight="1"
                    style="@style/numberStyle"
                    android:onClick="numberClick"/>
            <Button
                    android:text="@string/eight"
                    android:id="@+id/eight"
                    android:layout_weight="1"
                    style="@style/numberStyle"
                    android:onClick="numberClick"/>
            <Button
                    android:text="@string/nine"
                    android:id="@+id/nine"
                    android:layout_weight="1"
                    style="@style/numberStyle"
                    android:onClick="numberClick"/>
            <Button
                    android:text="@string/mul"
                    android:id="@+id/mul"
                    android:layout_weight="1"
                    style="@style/buttonStyle"
                    android:onClick="operatorclick"/>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5sp"
                android:layout_weight="1"
                android:orientation="horizontal">
            <Button
                    android:text="@string/four"
                    android:id="@+id/four"
                    android:layout_weight="1"
                    style="@style/numberStyle"
                    android:onClick="numberClick"/>
            <Button
                    android:text="@string/five"
                    android:id="@+id/five"
                    android:layout_weight="1"
                    style="@style/numberStyle"
                    android:onClick="numberClick"/>
            <Button
                    android:text="@string/six"
                    android:id="@+id/six"
                    android:layout_weight="1"
                    style="@style/numberStyle"
                    android:onClick="numberClick"/>
            <Button
                    android:text="@string/sub"
                    android:id="@+id/sub"
                    android:layout_weight="1"
                    style="@style/buttonStyle"
                    android:onClick="operatorclick"/>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5sp"
                android:layout_weight="1"
                android:orientation="horizontal">
            <Button
                    android:text="@string/one"
                    android:id="@+id/one"
                    android:layout_weight="1"
                    style="@style/numberStyle"
                    android:onClick="numberClick"/>
            <Button
                    android:text="@string/two"
                    android:id="@+id/two"
                    android:layout_weight="1"
                    style="@style/numberStyle"
                    android:onClick="numberClick"/>
            <Button
                    android:text="@string/three"
                    android:id="@+id/three"
                    android:layout_weight="1"
                    style="@style/numberStyle"
                    android:onClick="numberClick"/>
            <Button
                    android:text="@string/add"
                    android:id="@+id/add"
                    android:layout_weight="1"
                    style="@style/buttonStyle"
                    android:onClick="operatorclick"/>


        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5sp"
                android:layout_weight="1"
                android:orientation="horizontal">

            <Button
                    android:text="@string/zero"
                    android:id="@+id/zero"
                    android:layout_weight="1"
                    style="@style/numberStyle"
                    android:layout_width="104sp"
                    android:onClick="numberClick"/>
            <Button
                    android:text="@string/dot"
                    android:id="@+id/dot"
                    android:layout_weight="1"
                    style="@style/numberStyle"

            />

            <Button
                    android:text="@string/equal"
                    android:id="@+id/equal"
                    android:layout_weight="1"
                    style="@style/buttonStyle"
                    android:onClick="equalClick"/>
        </LinearLayout>

    </LinearLayout>




</LinearLayout>